Se agrega contenido en el archivo index

--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
+    <title> Mi Primer Proyecto </title>
+
 </head>
 <body>
+    <h1> LO QUE NO SABIAS SOBRE LOS CABALLOS </h1>
+
+    <p> Hola a todos! ¿Cómo están? </p>
+    <p> Bienvenidos a este portal en el que podran conocer un poco más sobre estos magníficos animales. </p>
+
+    <h2> 5 Datos Interesantes sobre Caballos </h2>
+
+    <h3> Los caballos duermen de pie </h3>
+
+    <p> ¡Sí! Los caballos y yeguas pueden dormir de pie. Aunque también pueden dormir tumbados. Los caballos deben descansar para lograr un ciclo de sueño reparador completo durante un mínimo de 30 minutos por día, a diferencia de los humanos que necesitamos una media de 7-8 horas diarias. Hay factores que pueden afectar a la rutina del sueño de los caballos como el clima, el espacio disponible o disuasivos físicos, como impedimentos musculoesqueléticos; es decir, artrosis. </p>
+
+    <h3> Los caballos no pueden eructar </h3>
+
+    <p> Los caballos no pueden eructar, ni vomitar, ni tampoco respirar por la boca, tal y como lo hacen los humanos. El sistema digestivo de un caballo tiene un solo sentido, a diferencia de otros animales. Aunque tienen una manera bastante eficiente de procesar los alimentos fibrosos y duros, el sistema digestivo interno que tienen, al ser largo y unidireccional, puede causar problemas gastrointestinales. </p>
+
+    <h3> Los dientes de un caballo te informan su edad aproximada </h3>
+
+    <p> Aunque sí que es cierto que no se puede conocer la edad exacta de un caballo por sus dientes, puedes aproximarte a su edad por sus dientes. Los caballos tienen dientes de erupción continua, es decir, que van saliendo a su vez que se van desgastando. Un potro nace sin dientes, pero a partir de los 6 años de edad, la técnica que nos puede ayudar acercarnos a la edad del caballo es el Surco de Galvayne. Aunque no es una técnica muy exacta, permite al criador saber si su caballo está entre los diez y treinta años. Aparece a los 10 años como un pequeño surco a continuación de la encía, a los 15 años ya llega a la mitad del diente y a los 20 años alcanza el extremo del incisivo. </p>
+
+    <h3> Los caballos pueden vivir más de 30 años </h3>
+     
+    <p> Una de las preguntas más frecuentes es: ¿cuánto tiempo puede vivir mi caballo? Gracias a los avances, al conocimiento sobre la nutrición, el cuidado y la medicina veterinaria, entre otros factores, la esperanza de vida equina hoy día supera los 30 años. </p>
     
-</body>
+    <h3> La mayoría de los caballos blancos son en realidad grises </h3>
+
+    <p> Pocos caballos blancos nacen de este color, suelen nacer con un tono más gris e incluso tonos oscursos y poco a poco van cambiando el color. Incluso pueden comenzar como castaños o casi negros y luego ser blancos. De hecho, estos caballos no son llamados blancos, sino grises. </p>
+    <img src="https://www.google.com/imgres?q=caballo&imgurl=https%3A%2F%2Fs1.elespanol.com%2F2020%2F05%2F17%2Fcomo%2Fcuriosidades-animales-como_hacer_490711329_152100912_1706x960.jpg&imgrefurl=https%3A%2F%2Fwww.elespanol.com%2Fcomo%2Fduermen-caballos-pie-tumbados%2F490701055_0.amp.html&docid=6avY0jHorLqtKM&tbnid=LzDud1cT-wJsVM&vet=12ahUKEwitreOkkLyIAxWpsJUCHau1GcoQM3oECGIQAA..i&w=1706&h=960&hcb=2&ved=2ahUKEwitreOkkLyIAxWpsJUCHau1GcoQM3oECGIQAA" alt="Caballos">
+
 </html>
