--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     <h3> La mayoría de los caballos blancos son en realidad grises </h3>
 
     <p> Pocos caballos blancos nacen de este color, suelen nacer con un tono más gris e incluso tonos oscursos y poco a poco van cambiando el color. Incluso pueden comenzar como castaños o casi negros y luego ser blancos. De hecho, estos caballos no son llamados blancos, sino grises. </p>
-    <img src="https://www.google.com/imgres?q=caballo&imgurl=https%3A%2F%2Fs1.elespanol.com%2F2020%2F05%2F17%2Fcomo%2Fcuriosidades-animales-como_hacer_490711329_152100912_1706x960.jpg&imgrefurl=https%3A%2F%2Fwww.elespanol.com%2Fcomo%2Fduermen-caballos-pie-tumbados%2F490701055_0.amp.html&docid=6avY0jHorLqtKM&tbnid=LzDud1cT-wJsVM&vet=12ahUKEwitreOkkLyIAxWpsJUCHau1GcoQM3oECGIQAA..i&w=1706&h=960&hcb=2&ved=2ahUKEwitreOkkLyIAxWpsJUCHau1GcoQM3oECGIQAA" alt="Caballos">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyQRZsbHJ2G_Md3KBsXGDJmU0FF77Z4zK8arlJcG8U1VJdXkLnF05dnP9ROLkXQZ1OukQ&usqp=CAU" alt="Caballos">
 
 </html>
