Ultimos cambios agregados a ambos archivos

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 <body>
     <h1> LO QUE NO SABIAS SOBRE LOS CABALLOS </h1>
 
-    <p> Hola a todos! ¿Cómo están? </p>
-    <p> Bienvenidos a este portal en el que podran conocer un poco más sobre estos magníficos animales. </p>
+    <p id="parrafo1"> Bienvenidos a este portal en el que podran conocer un poco más sobre estos magníficos animales. </p>
 
-    <h2> 5 Datos Interesantes sobre Caballos </h2>
+    <h2> Cinco Datos Interesantes sobre Caballos </h2>
 
     <h3> Los caballos duermen de pie </h3>
 
@@ -35,6 +34,6 @@
     <h3> La mayoría de los caballos blancos son en realidad grises </h3>
 
     <p> Pocos caballos blancos nacen de este color, suelen nacer con un tono más gris e incluso tonos oscursos y poco a poco van cambiando el color. Incluso pueden comenzar como castaños o casi negros y luego ser blancos. De hecho, estos caballos no son llamados blancos, sino grises. </p>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyQRZsbHJ2G_Md3KBsXGDJmU0FF77Z4zK8arlJcG8U1VJdXkLnF05dnP9ROLkXQZ1OukQ&usqp=CAU" alt="Caballos">
+    <img id="Imagen1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyQRZsbHJ2G_Md3KBsXGDJmU0FF77Z4zK8arlJcG8U1VJdXkLnF05dnP9ROLkXQZ1OukQ&usqp=CAU" alt="Caballos">
 
 </html>
