Se modificaron los archivos index y css antes de incorporar nuevos archivos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 <body>
     <h1> LO QUE NO SABIAS SOBRE LOS CABALLOS </h1>
 
+        <div class="contenedor-slider">
+            <div class="slider-screen">
+                <img name="Imagen">
+            </div>
+
+            <div id="slider-arrow">
+                <div class="slider-izquierdo"> <img src="./Imagenes/Izquierda.svg" alt="Izquierda"></div>
+                <div class="slider-derecho"> <img src="./Imagenes/Derecha.svg" alt="Derecha"> </div>
+            </div>
+        </div>
+
     <p id="parrafo1"> Bienvenidos a este portal en el que podran conocer un poco más sobre estos magníficos animales. </p>
 
     <h2> Cinco Datos Interesantes sobre Caballos </h2>
@@ -34,6 +45,5 @@
     <h3> La mayoría de los caballos blancos son en realidad grises </h3>
 
     <p> Pocos caballos blancos nacen de este color, suelen nacer con un tono más gris e incluso tonos oscursos y poco a poco van cambiando el color. Incluso pueden comenzar como castaños o casi negros y luego ser blancos. De hecho, estos caballos no son llamados blancos, sino grises. </p>
-    <img id="Imagen1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyQRZsbHJ2G_Md3KBsXGDJmU0FF77Z4zK8arlJcG8U1VJdXkLnF05dnP9ROLkXQZ1OukQ&usqp=CAU" alt="Caballos">
 
 </html>
